# clawsql

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.allinone.yml  docker-compose.demo.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  tsconfig.json
.github/workflows/: ci.yml  docker.yml  npm.yml  publish.yml
docker/: Dockerfile  Dockerfile.allinone  Dockerfile.node  entrypoint-allinone.sh  supervisord.conf
docker/grafana/dashboards/: clawsql.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/init/: primary.sql  replica.sql
docker/openclaw/: entrypoint.sh  openclaw.json
docker/orchestrator/: orchestrator-schema.sql  orchestrator.conf.json
docker/prometheus/: prometheus.yml
docker/proxysql/: entrypoint.sh  init.sql.demo  proxysql.cnf
docs/: AI.md  API.md  DEMO.md  GET_STARTED.md  TEST_LIFECYCLE.md  failover.md
docs/architecture/: system_design.md
init/: metadata.sql  primary.sql  replica-host.sql  replica.sql
scripts/: cleanup.sh  deploy_demo.sh  health_check.sh  load_data.sh  simulate_failover.sh
skills/clawsql/: SKILL.md
skills/release/: SKILL.md
skills/version/: SKILL.md
src/: app.ts  index.ts
src/__tests__/__mocks__/: esm-mocks.ts
src/__tests__/cli/: completer.test.ts  formatter.test.ts  raw-input.test.ts  registry.test.ts  repl.test.ts
src/__tests__/config/: settings.test.ts
src/__tests__/types/: index.test.ts
src/__tests__/utils/: database.test.ts  exceptions.test.ts  logger.test.ts
src/api/routes/: clusters.ts  config.ts  failover.ts  instances.ts  monitoring.ts  webhooks.ts
src/api/schemas/: index.ts
src/clawsql/: __init__.py  main.py
src/clawsql/config/: __init__.py  audit.py  settings.py  versioning.py
src/clawsql/core/: __init__.py
src/clawsql/utils/: __init__.py  database.py  exceptions.py  logger.py  security.py
src/cli/: completer.ts  formatter.ts  index.ts  raw-input.ts  registry.ts  repl.ts
src/cli/agent/: handler.ts  index.ts  openclaw-integration.ts
src/cli/commands/: cleanup.ts  clusters.ts  config.ts  cron.ts  doctor.ts  failover.ts  health.ts  help.ts  install.ts  instances.ts  notify.ts  openclaw.ts  sql.ts  start.ts  status.ts  stop.ts  templates.ts  topology.ts
src/cli/ui/: components.ts  index.ts
src/cli/utils/: ai-config.ts  args.ts  command-executor.ts  docker-files.ts  docker-prereq.ts
src/config/: settings.ts
src/core/discovery/: cluster-view.ts  scanner.ts  topology.ts
src/core/failover/: candidate-selector.ts  executor.ts  operation-builder.ts  operation-runner.ts  promoter.ts  recovery-manager.ts  types.ts
src/core/monitoring/: collector.ts  exporters.ts
src/core/provisioning/: cluster-provisioner.ts  index.ts  predefined-templates.ts  template-manager.ts
src/core/routing/: proxysql-manager.ts
src/core/sync/: replica-recovery.ts  sync-coordinator.ts  topology-watcher.ts  types.ts
src/types/: index.ts
src/utils/: database.ts  exceptions.ts  logger.ts  mysql-client.ts
tests/: __init__.py  conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_workflows.py
tests/unit/: test_api_endpoints.py  test_config_utils.py  test_discovery_models.py  test_failover.py  test_monitoring.py  test_routing.py  test_scanner.py  test_topology.py
(+63 files in other folders)
